fixing artowrk images on mobile screens

--- a/css/artwork.css
+++ b/css/artwork.css
@@ -148,6 +148,25 @@
   background-color: white;
 }
 
+
+@media screen and (max-width: 375px) {
+  .thumbnail {
+    position: absolute;
+    bottom: 100px;
+    left: 60px;
+    z-index: 11;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+    padding: 0.9rem;
+    gap: 4px;
+    width: 70%;
+    height: 250px;
+
+  }
+
+}
+
 @media screen and (max-width: 678px) {
   /* .slider .list .item img{
     background-position: 12%;
@@ -195,7 +214,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
     padding: 1.2rem;
-    gap: 10px;
+    gap: 4px;
     width: 70%;
     height: 270px;
     align-items: center;
